Add CSS Styles and a button

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="container">
-
-    </div>
+    <div class="header">Etch a Sketch</div>
+    <button>Set the number of squares per side</button>
+    <div class="container"></div>
     <script src="./script.js"></script>
 </body>
 </html>
