--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="header">Etch a Sketch</div>
-    <button>Set Size</button>
+    <button id="size">Set Size</button>
     <div class="container"></div>
     <script src="./script.js"></script>
 </body>
