Enable feature that darkens each square with each mouseover

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <div class="header">Etch a Sketch</div>
-    <button id="size">Set Size</button>
+    <div class="buttons">
+        <button id="size">Set Size</button>
+        <button id="reset">Reset</button>
+    </div>
     <div class="container"></div>
     <script src="./script.js"></script>
 </body>
